<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tap List</string>
    <string name="title_brew_detail">Brew Detail</string>
    <string name="beer_market">BEER MARKET</string>
    <string name="tap_list_header">[taplist]</string>
    <string name="tap_list_header_abv">ABV</string>
    <string name="tap_list_header_glass">GLASS</string>
    <string name="tap_list_header_quart">QT</string>
    <string name="tap_list_header_growler">GROWLER</string>
    <string name="pub_selection">Select a Pub</string>
    <string name="brew_name">Brew Name</string>
    <string name="brew_abv">Brew ABV</string>
    <string name="featured">FEATURED</string>
    <string name="empty_taplist">There is currently no data avaiable, this might be due to your device not being within range of a wifi or celluar signal.  Try refreshing the tap list once you have resolved the networking issue.</string>
    <string name="no_pubs">No Pubs Available</string>
    
    <!-- Notifications Dialog -->
    <string name="notification_dialog_prompt">Do you want to allow this application to receive push notifications?</string>
    <string name="notification_dialog_yes">YES</string>
    <string name="notification_dialog_no">NO</string>
    
    <!-- Image Descriptions -->
    <string name="tap_list_image_desc">Brew Glass Type</string>
    <string name="activty_header_image_desc">Taplist</string>
    <string name="loading_spinner">Loading Spinner</string>
    
    <!--  Preference File Name -->
    <string name="taplist_preference">taplist_preference</string>
    <string name="push_perference_header_title">Push Preferences</string>
    
    <!--  Settings -->
    <string name="settings">Settings</string>
	<string name="push_enabled_checkbox">Push enabled checkbox</string>
	<string name="push_enabled">Push Enabled</string>
	<string name="sound_enabled">Sound Enabled</string>
	<string name="vibrate_enabled">Vibrate Enabled</string>
	<string name="quite_time_enabled">Quiet Time Enabled</string>
	<string name="start_time">Start Time</string>
	<string name="end_time">End Time</string>
    
    <!--  Notifications -->
    <string name="notification_Subject">Subject</string>
    <string name="notification_Message">Message</string>
    <string name="notification_icon_desc">Notification Icon</string>
    
    <!-- Sample Values -->
    <string name="sample_abv">8.3%</string>
    <string name="sample_brew">Firestone Walker Wookey Jack Rye Black IPA</string>
    <string name="sample_desc">A great tasting Ale that makes any steak better.</string>
    <string name="sample_glass_price">$4.49</string>
    <string name="sample_quart_price">$8.99</string>
    <string name="sample_growler_price">$17.99</string>

    <!-- KEYS  -->
    <string name="ARG_PUB_ID">com.ratworkshop.taplist.pub_id</string>
    <string name="ARG_BREW_ID">com.ratworkshop.taplist.brew_id</string>
    <string name="LAST_UPDATE">com.ratworkshop.taplist.lastupdate</string>
    <string name="PUSH_NOTIFICATION_SHOWN">com.ratworkshop.taplist.push_notification_shown</string>
    
    <!-- MENU TITLES -->
    <string name="SETTINGS_MENU">Settings</string>
    <string name="REFRESH_MENU">Refresh Pubs</string>
</resources>