<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

<LinearLayout android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="20dip">

	<LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent">

        <CheckBox android:id="@+id/push_enabled"
            android:layout_height="wrap_content"
            android:checked="true"
            android:contentDescription="@string/push_enabled_checkbox"
            android:layout_width="wrap_content"/>

        <TextView android:text="@string/push_enabled"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16sp"/>

	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent">

        <CheckBox android:id="@+id/sound_enabled"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_width="wrap_content"/>

        <TextView android:text="@string/sound_enabled"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16sp"/>

	</LinearLayout>
	
		<LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent">

        <CheckBox android:id="@+id/vibrate_enabled"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_width="wrap_content"/>

        <TextView android:text="@string/vibrate_enabled"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16sp"/>

	</LinearLayout>
	
		<LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent">

        <CheckBox android:id="@+id/quiet_time_enabled"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_width="wrap_content"/>

        <TextView android:text="@string/quite_time_enabled"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16sp"/>

	</LinearLayout>
              
<TextView
    android:text="@string/start_time"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:textSize="16sp"/>
            
<TimePicker
    android:enabled="false"
    android:id="@+id/start_time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

<TextView
    android:paddingTop="10dip"
    android:text="@string/end_time"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:textSize="16sp"/>
    
<TimePicker
    android:id="@+id/end_time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

</LinearLayout>
</ScrollView>
