<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/taplistBeerMarket"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/beer_market"
        android:textColor="@color/Header"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="monospace" />
    
    <TextView
        android:id="@+id/taplistHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/tap_list_header"
        android:textColor="@color/Header"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/taplistHeaderABV"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tap_list_header_abv"
            android:textColor="@color/SubHeader"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/taplistHeaderGlass"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tap_list_header_glass"
            android:textColor="@color/SubHeader"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/taplistHeaderQuart"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tap_list_header_quart"
            android:textColor="@color/SubHeader"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/taplistHeaderGrowler"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
        	android:layout_marginLeft="5dp"
        	android:paddingRight="5dp"
            android:text="@string/tap_list_header_growler"
            android:textColor="@color/SubHeader"
            android:textSize="12sp"
            android:textStyle="normal" />

    </LinearLayout>

    
</LinearLayout>