<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/taplistAPV"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:text="@string/sample_abv"
        android:textColor="@color/SubHeader"
        android:textSize="12sp"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/taplistNameIconWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/taplistIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/tap_list_image_desc"
            android:gravity="center_vertical"
            android:scaleType="fitCenter"
            android:src="@drawable/belgian_ale" />

        <TextView
            android:id="@+id/taplistTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:text="@string/sample_brew"
            android:textColor="@color/SubHeader"
            android:textIsSelectable="false"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/taplistGlass"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical|left"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/sample_glass_price"
        android:textColor="@color/SubHeader"
        android:textIsSelectable="false"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/taplistQuart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical|left"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/sample_quart_price"
        android:textColor="@color/SubHeader"
        android:textIsSelectable="false"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/taplistGrowler"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical|left"
        android:paddingRight="5dp"
        android:text="@string/sample_growler_price"
        android:textColor="@color/SubHeader"
        android:textIsSelectable="false"
        android:textSize="12sp"
        android:textStyle="normal" />

</LinearLayout>