<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/brew_detail_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/brew_detail_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <ImageView
                android:id="@+id/details_brew_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:contentDescription="@string/tap_list_image_desc"
                android:scaleType="center"
                android:src="@drawable/belgian_ale" />

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/details_featured_brew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/featured"
                    android:textColor="@color/Black"
                    android:textIsSelectable="false"
                    android:textSize="24sp" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/details_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:id="@+id/details_brew_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="@string/brew_name"
                android:textIsSelectable="false" >
            </TextView>

            <TextView
                android:id="@+id/details_brew_abv"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/brew_abv"
                android:textIsSelectable="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/details_brew_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="16sp"
            android:text="@string/brew_name"
            android:textIsSelectable="false" >
        </TextView>

        <LinearLayout
            android:id="@+id/details_prices_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/details_Glass_header"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/tap_list_header_glass"
                android:textColor="@color/SubHeader"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/details_Quart_header"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/tap_list_header_quart"
                android:textColor="@color/SubHeader"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/details_Growler_header"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingRight="5dp"
                android:text="@string/tap_list_header_growler"
                android:textColor="@color/SubHeader"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_prices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/details_Glass"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/tap_list_header_glass"
                android:textColor="@color/SubHeader"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/details_Quart"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/tap_list_header_quart"
                android:textColor="@color/SubHeader"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/details_Growler"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingRight="5dp"
                android:text="@string/tap_list_header_growler"
                android:textColor="@color/SubHeader"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>